구현부분 정리

--- a/TP/TP.csproj
+++ b/TP/TP.csproj
@@ -80,7 +80,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="db\Class1.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,10 +118,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
+    <None Include="db\Oracle.DataAccess.Common.Configuration.Section.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Oracle.ManagedDataAccess.Client.Configuration.Section.xsd">
+    <None Include="db\Oracle.ManagedDataAccess.Client.Configuration.Section.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
