--- a/TP/Properties/Settings.settings
+++ b/TP/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="LoginIDSave" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="userID" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="Orderindex" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
