--- a/TP/App.config
+++ b/TP/App.config
@@ -32,6 +32,12 @@
       <setting name="LoginIDSave" serializeAs="String">
         <value />
       </setting>
+      <setting name="userID" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Orderindex" serializeAs="String">
+        <value>0</value>
+      </setting>
     </TP.Properties.Settings>
   </userSettings>
 </configuration>
