--- a/TP/App.config
+++ b/TP/App.config
@@ -38,6 +38,9 @@
       <setting name="Orderindex" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="date" serializeAs="String">
+        <value />
+      </setting>
     </TP.Properties.Settings>
   </userSettings>
 </configuration>
