검색 부분 중복검색 가능 수정

--- a/TP/App.config
+++ b/TP/App.config
@@ -41,6 +41,9 @@
       <setting name="date" serializeAs="String">
         <value />
       </setting>
+      <setting name="Returnindex" serializeAs="String">
+        <value>0</value>
+      </setting>
     </TP.Properties.Settings>
   </userSettings>
 </configuration>
