--- a/TP/TP.csproj
+++ b/TP/TP.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Form\productinformation.Designer.cs">
       <DependentUpon>productinformation.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoginController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\setting.cs">
