로그인 엔티티 추가및 바운드리 컨트롤 수정

--- a/TP/TP.csproj
+++ b/TP/TP.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Form\salesfigures.Designer.cs">
       <DependentUpon>salesfigures.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserEntity.cs" />
     <EmbeddedResource Include="Form\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
