--- a/TP/TP.csproj
+++ b/TP/TP.csproj
@@ -123,7 +123,7 @@
     <Compile Include="Form\productinformation.Designer.cs">
       <DependentUpon>productinformation.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginController.cs" />
+    <Compile Include="control\LoginController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Form\setting.cs">
@@ -150,7 +150,9 @@
     <Compile Include="Form\salesfigures.Designer.cs">
       <DependentUpon>salesfigures.cs</DependentUpon>
     </Compile>
-    <Compile Include="UserEntity.cs" />
+    <Compile Include="control\StockController.cs" />
+    <Compile Include="Entitiy\StockEntity.cs" />
+    <Compile Include="Entitiy\UserEntity.cs" />
     <EmbeddedResource Include="Form\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
